Number v2 batch items positionally, resolve the operation scope once, and contain token-scoped schemas
Signed-off-by: klaraf755 <80590912+klaraf755@users.noreply.github.com>